<resources>
    <string name="app_name"><i>fin</i>TaskAnyplace</string>

    <string name="loading_title">Loading</string>
    <string name="loading_content">Generating Task List</string>
    <string name="action_settings">Settings</string>
    <string name="add_evernote">Add Evernote Account</string>
    <string name="label_login">Login with Evernote</string>
    <string name="evernote">Evernote</string>
    <string name="google_calendar">Google Calendar</string>
    <string name="yelp">Yelp</string>
    <string name="google_places">Google Places</string>
    <string name="add_accounts">Add Accounts to Sync</string>
    <string name="radius">Radius</string>
    <string name="refresh_rate">Notification Update Frequency</string>
    <string name="search_engine">Search Results From</string>
    <string name="notification_msg">Some task can be completed based on your location. Click to view</string>
    <string name="preferences">Preferences</string>
    <string name="delete">Delete</string>
    <string name="search_nearby">Search Nearby</string>
    <string name="really_delete">Do you want to remove this entry ?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="search_nearby_msg">Searching nearby places</string>
    <string name="time_pref_start">1 hour</string>
    <string name="refresh_time_cen">4 hours</string>
    <string name="refresh_time_end">8 hours</string>
    <string name="wunderlist">Wunderlist</string>
    <string name="refresh">Refresh</string>

</resources>
